--- a/src/components/search/searchItem.scss
+++ b/src/components/search/searchItem.scss
@@ -20,12 +20,26 @@
     }
     .read-more-link {
       color: #2862ae;
+      cursor: pointer;
+      width:50px;
     }
   }
   > div {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    &.content{
+      flex: 1;
+      overflow: hidden;
+      h3{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+    &.link{
+      width: 50px;
+    }
   }
   .title {
     margin: 0;
@@ -47,6 +61,8 @@
   .read-more-link {
     color: #999999;
     font-size: 12px;
+    width:50px;
+    padding: 0;
     transition: all 300ms ease-in-out;
     &:hover {
       text-decoration: none;
