--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -13,6 +13,7 @@
 .footer {
   padding: pc2rem(40) 0;
   background: #efefef;
+  border-bottom: pc2rem(10) solid #2862ae;
   .phone-wrapper {
     font-size: 12px;
     color: #5c5c5c;
