--- a/src/containers/products/market.scss
+++ b/src/containers/products/market.scss
@@ -88,6 +88,7 @@
       text-align: center;
       margin: 0 10px;
       border-bottom: 1px solid #dddddd;
+      width: 100%;
       &::after {
         content: '';
         position: absolute;
