--- a/src/components/search/searchItem.scss
+++ b/src/components/search/searchItem.scss
@@ -19,6 +19,7 @@
       background-size: 80%;
     }
     .read-more-link {
+      background-color: #fff;
       color: #2862ae;
       cursor: pointer;
       width:50px;
@@ -59,6 +60,7 @@
     transition: all 300ms ease-in-out;
   }
   .read-more-link {
+    background-color: #fff;
     color: #999999;
     font-size: 12px;
     width:50px;
