--- a/src/containers/products/products.scss
+++ b/src/containers/products/products.scss
@@ -47,7 +47,7 @@
   margin: pc2rem(56) 0;
 
   .lists-1 {
-    column-count: 3;
+    // column-count: 1;
     .item {
       border-radius: 0;
       border: none;
