--- a/src/containers/responsibility/responsibility.scss
+++ b/src/containers/responsibility/responsibility.scss
@@ -162,7 +162,7 @@
       font-family: 'sc-m';
       font-size: 12px;
       margin-left: auto;
-      button {
+      button, a {
         width: 50px;
         height: 56px;
         padding: 0;
@@ -170,6 +170,7 @@
         text-align: center;
         transition: all 300ms ease-in-out;
         line-height: 92px;
+        display: inline-block;
         &:hover {
           color: #2862ae;
             &.download-btn {
