--- a/src/containers/products/detail.scss
+++ b/src/containers/products/detail.scss
@@ -12,9 +12,12 @@
     .cover {
       width: pc2rem(350);
       height: pc2rem(350);
+      border: 1px solid #ddd;
+      display: flex;
+      align-items: center;
+      
       img {
         width: 100%;
-        height: 100%;
       }
     }
     .head {
