修改首页banner箭头

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,3 +1,10 @@
+.carousel-control-prev-icon{
+    width: 50px!important;
+    height: 50px!important;
+    background-image: url('~@/assets/images/banner_left.png')!important;
+}
 .carousel-control-next-icon{
-    background-image: url('~@/assets/images/banner_left.png');
+    width: 50px!important;
+    height: 50px!important;
+    background-image: url('~@/assets/images/banner_right.png')!important;
 }
