--- a/src/containers/welcome/welcome.scss
+++ b/src/containers/welcome/welcome.scss
@@ -37,6 +37,7 @@ $colorSky :#0187d0;
       font-weight: bold;
       color: #fff;
       background: url(~@/assets/images/welcome/num_bg2.png);
+      background-size: cover;
       position: absolute;
       left: pc2rem(-45);
       top: pc2rem(30);
@@ -118,6 +119,7 @@ $colorSky :#0187d0;
       font-weight: bold;
       color: #fff;
       background: url(~@/assets/images/welcome/num_bg1.png);
+      background-size: cover;
       position: absolute;
       left: pc2rem(-45);
       top: pc2rem(30);
@@ -165,6 +167,7 @@ $colorSky :#0187d0;
       font-weight: bold;
       color: #fff;
       background: url(~@/assets/images/welcome/num_bg1.png);
+      background-size: cover;
       position: absolute;
       left: pc2rem(-45);
       top: pc2rem(30);
@@ -208,6 +211,7 @@ $colorSky :#0187d0;
       font-weight: bold;
       color: #fff;
       background: url(~@/assets/images/welcome/num_bg1.png);
+      background-size: cover;
       position: absolute;
       left: pc2rem(-45);
       top: pc2rem(180);
@@ -250,6 +254,7 @@ $colorSky :#0187d0;
       font-weight: bold;
       color: #fff;
       background: url(~@/assets/images/welcome/num_bg1.png);
+      background-size: cover;
       position: absolute;
       left: pc2rem(-45);
       top: pc2rem(30);
@@ -282,6 +287,7 @@ $colorSky :#0187d0;
       font-weight: bold;
       color: #fff;
       background: url(~@/assets/images/welcome/num_bg1.png);
+      background-size: cover;
       position: absolute;
       left: pc2rem(-45);
       top: pc2rem(30);
