--- a/src/components/navbars/navbars.scss
+++ b/src/components/navbars/navbars.scss
@@ -41,15 +41,14 @@
   width: pc2rem(150);
   position: absolute;
   top: pc2rem(64);
-  left: -24%;
-  width: 150%;
-  background: rgba($color: #fff, $alpha: .9);
-  margin: 0;
+  left: -70%;
+  width: 240%;
+  background: #fff;
+  margin-top: 0;
   display: inline-block;
   li{
-    font-weight: bold;
-    margin: 0;
-    padding:pc2rem(5) pc2rem(10);
+    margin-left: 0;
+    padding:pc2rem(8) pc2rem(10);
     // border-bottom: 1px solid #ebebeb;
     color: #333;
     a{
