--- a/src/containers/news/news.scss
+++ b/src/containers/news/news.scss
@@ -88,7 +88,7 @@
   }
   .i-m-g {
     width: pc2rem(200);
-    border: 1px solid red;
+    // border: 1px solid red;
   }
   .new-item {
     padding: pc2rem(35) pc2rem(60);
