--- a/src/containers/contact/contact.scss
+++ b/src/containers/contact/contact.scss
@@ -56,10 +56,10 @@
       width: 45%;
       background: #2c7ec9;
       border: 1px solid #2c7ec9;
-      transition: all 300ms ease-in-out;
-      &:hover {
-        opacity: 0.8;
-      }
+      // transition: all 300ms ease-in-out;
+      // &:hover {
+      //   opacity: 0.8;
+      // }
     }
   }
   .address {
@@ -75,8 +75,8 @@
       align-items: center;
       margin-bottom: 8px;
       > img {
-        width: 15px;
-        height: 15px;
+        // width: 15px;
+        // height: 15px;
         margin-right: 10px;
       }
     }
@@ -87,6 +87,7 @@
     background: #3059a5;
     color: #fff;
     img {
+      height: max-content;
       margin-right: 15px;
       &.qrcode {
         position: absolute;
@@ -104,4 +105,5 @@
 .map-container {
   width: 100%;
   margin-top: -100px;
+  background: #ececec;
 }
