--- a/src/containers/contact/contact.scss
+++ b/src/containers/contact/contact.scss
@@ -56,10 +56,12 @@
       width: 45%;
       background: #2c7ec9;
       border: 1px solid #2c7ec9;
+      color: #fff;
+      border-radius: 4px;
       // transition: all 300ms ease-in-out;
-      // &:hover {
-      //   opacity: 0.8;
-      // }
+      &:hover {
+        opacity: 0.8;
+      }
     }
   }
   .address {
