--- a/src/containers/products/detail.scss
+++ b/src/containers/products/detail.scss
@@ -45,8 +45,12 @@
       li {
         width: pc2rem(80);
         height: pc2rem(80);
+        border: 1px solid #ddd;
+        display: flex;
+        align-items: center;
+        margin-right: 10px;
         img {
-          display: block;
+          // display: block;
           width: 100%;
           height: 100%;
         }
