--- a/src/containers/responsibility/responsibility.scss
+++ b/src/containers/responsibility/responsibility.scss
@@ -140,7 +140,7 @@
     background: #fff;
     transition: all 300ms ease-in-out;
     &:hover {
-      box-shadow: 0px 1px 4px 1px #e7e7ea;
+      box-shadow: 0px 5px 7px 5px #e7e7ea;
       .options {
         
       }
@@ -317,13 +317,22 @@
     position: absolute;
     top: pc2rem(-70);
     right: pc2rem(64);
+    :hover{
+      background: #2862ae;
+    }
     button {
       width: pc2rem(128);
       height: pc2rem(70);
       background: #0187d0;
-      &:last-child {
+      :hover{
         background: #2862ae;
       }
+      // &:last-child {
+      //   background: #2862ae;
+      // }
     }
   }
+}
+.return{
+  background: transparent;
 }
