--- a/src/containers/products/products.scss
+++ b/src/containers/products/products.scss
@@ -81,6 +81,12 @@
       font-family: 'sc-r';
       font-size: 16px;
     }
+    .t-2 {
+      margin-top: 5px;
+      margin-bottom: 0;
+      font-family: 'sc-r';
+      font-size: 16px;
+    }
     .read-wrap{
       width: pc2rem(50);
       display: flex;
