--- a/src/containers/products/detail.scss
+++ b/src/containers/products/detail.scss
@@ -43,6 +43,7 @@
         margin-bottom: pc2rem(20);
       }
       li {
+        cursor: pointer;
         width: pc2rem(80);
         height: pc2rem(80);
         border: 1px solid #ddd;
