--- a/src/containers/newsDetail/newsDetail.scss
+++ b/src/containers/newsDetail/newsDetail.scss
@@ -3,6 +3,7 @@
 }
 
 .news-detail-body {
+  background-color: #fff;
   padding: 0 1rem;
   .news-header {
     padding: pc2rem(44) pc2rem(80);
@@ -61,5 +62,30 @@
 
   .content {
     @extend .quote;
+  }
+  .index-1{
+    margin:0rem 4.16667rem 1.5625rem;
+    border-left: 5px solid #2862ae;
+    min-height: 80px;
+  }
+  .index-content{
+    padding: 0 30px;
+    font-size: 0.9rem;
+    font-weight: 400;
+  }
+  .index-2{
+  
+    background-image: url('~@/assets/images/index-2.png');
+    margin: 0 0 0 20px;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    height: 30px;
+  }
+  .index-3{
+    background-image: url('~@/assets/images/index-3.png');
+    background-position: right;
+    background-repeat: no-repeat;
+    text-align: right;
+    height: 30px;
   }
 }
