--- a/src/containers/responsibility/responsibility.scss
+++ b/src/containers/responsibility/responsibility.scss
@@ -54,11 +54,13 @@
           display: flex;
           justify-content: space-between;
           .left{
+            cursor: pointer;
             width: pc2rem(13);
             height: pc2rem(17);
             background: url('~@/assets/images/responsibility/arrow_left_100.png') 0 0 / pc2rem(13) pc2rem(17) no-repeat;
           }
           .right{
+            cursor: pointer;
             width: pc2rem(13);
             height: pc2rem(17);
             background: url('~@/assets/images/responsibility/arrow_right_100.png') 0 0 / pc2rem(13) pc2rem(17) no-repeat;
